# idealii

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  Readme.md  _formulas.tex  annotated.html  classes.html  classidealii_1_1QGaussRadau-members.html  classidealii_1_1QGaussRadau.html  classidealii_1_1QLeftBox-members.html  classidealii_1_1QLeftBox.html  classidealii_1_1QLeftBox__coll__graph.dot  classidealii_1_1QLeftBox__coll__graph.map  classidealii_1_1QLeftBox__coll__graph.md5  classidealii_1_1QRightBox-members.html  classidealii_1_1QRightBox.html  classidealii_1_1QRightBox__coll__graph.map  classidealii_1_1QRightBox__inherit__graph.dot  classidealii_1_1QRightBox__inherit__graph.map  classidealii_1_1QRightBox__inherit__graph.md5  classidealii_1_1TimeIteratorCollection-members.html  classidealii_1_1TimeIteratorCollection.html  classidealii_1_1slab_1_1DoFHandler-members.html  classidealii_1_1slab_1_1DoFHandler.html  classidealii_1_1slab_1_1Triangulation-members.html  classidealii_1_1slab_1_1Triangulation.html  classidealii_1_1slab_1_1parallel_1_1distributed_1_1Triangulation-members.html  classidealii_1_1slab_1_1parallel_1_1distributed_1_1Triangulation.html  classidealii_1_1spacetime_1_1DG__FiniteElement-members.html  classidealii_1_1spacetime_1_1DG__FiniteElement.html  classidealii_1_1spacetime_1_1DoFHandler-members.html  classidealii_1_1spacetime_1_1DoFHandler.html  classidealii_1_1spacetime_1_1FEFaceValues-members.html  classidealii_1_1spacetime_1_1FEFaceValues.html  classidealii_1_1spacetime_1_1FEJumpValues-members.html  classidealii_1_1spacetime_1_1FEJumpValues.html  classidealii_1_1spacetime_1_1FEValues-members.html  classidealii_1_1spacetime_1_1FEValues.html  classidealii_1_1spacetime_1_1QGauss-members.html  (+121 more)
.github/: dependabot.yml
.github/workflows/: codeql.yml  dealii930.yml  dealii940.yml  dealii942.yml  dealii950.yml  dependency-review.yml  documentation.yml  doxygen.yml  indent.yml  scorecard.yml
cmake/: CMakeLists.txt  ideal.IIConfig.cmake.in
cmake/macros/: CMakeLists.txt  add_idealii_sources.cmake
dev/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
dev/_images/: step-2-velocity.ogv  step-4-pressure.ogv
dev/_sources/: index.rst.txt
dev/doxygen/: _formulas.tex  _formulas_dark.tex  annotated.html  classes.html  classidealii_1_1QGaussRadau-members.html  classidealii_1_1QGaussRadau.html  classidealii_1_1QGaussRadau__coll__graph.md5  classidealii_1_1QGaussRadau__inherit__graph.map  classidealii_1_1QLeftBox-members.html  classidealii_1_1QLeftBox.html  classidealii_1_1QLeftBox__coll__graph.map  classidealii_1_1QLeftBox__inherit__graph.map  classidealii_1_1QLeftBox__inherit__graph.md5  classidealii_1_1QRightBox-members.html  classidealii_1_1QRightBox.html  classidealii_1_1QRightBox__coll__graph.map  classidealii_1_1QRightBox__coll__graph.md5  classidealii_1_1TimeIteratorCollection-members.html  classidealii_1_1TimeIteratorCollection.html  classidealii_1_1slab_1_1DoFHandler-members.html  classidealii_1_1slab_1_1DoFHandler.html  classidealii_1_1slab_1_1Triangulation-members.html  classidealii_1_1slab_1_1Triangulation.html  classidealii_1_1slab_1_1parallel_1_1distributed_1_1Triangulation-members.html  classidealii_1_1slab_1_1parallel_1_1distributed_1_1Triangulation.html  classidealii_1_1spacetime_1_1DG__FiniteElement-members.html  classidealii_1_1spacetime_1_1DG__FiniteElement.html  classidealii_1_1spacetime_1_1DoFHandler-members.html  classidealii_1_1spacetime_1_1DoFHandler.html  classidealii_1_1spacetime_1_1FEFaceValues-members.html  classidealii_1_1spacetime_1_1FEFaceValues.html  classidealii_1_1spacetime_1_1FEJumpValues-members.html  classidealii_1_1spacetime_1_1FEJumpValues.html  classidealii_1_1spacetime_1_1FEValues-members.html  classidealii_1_1spacetime_1_1FEValues.html  classidealii_1_1spacetime_1_1QGauss-members.html  classidealii_1_1spacetime_1_1QGauss.html  classidealii_1_1spacetime_1_1QGaussLeftBox-members.html  classidealii_1_1spacetime_1_1QGaussLeftBox.html  (+136 more)
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/sphinx/: .gitignore  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  conf.py  doxy_extra.css  index.rst  installation.rst  requirements.txt
doc/sphinx/_ext/: cpp_example_directives.py  maths_admonition_directives.py
doc/sphinx/_ext/_static/: maths_admonition.css
doc/sphinx/_static/examples/: step-1.ogv  step-2-pressure.ogv  step-3.ogv
doc/sphinx/examples/: overview.rst  step-1.rst  step-2.rst  step-3.rst  step-4.rst
doc/sphinx/maths/: discretization.rst  function_spaces.rst
examples/: CMakeLists.txt  Readme.md
examples/step-1/: CMakeLists.txt  Readme.md  step-1.cc
examples/step-2/: CMakeLists.txt  Readme.md  step-2.cc
examples/step-3/: CMakeLists.txt  Readme.md  compare_support_types.R  plot_convergence_results.R  run_simulations.R  step-3.cc
examples/step-4/: CMakeLists.txt  Readme.md  nsbench4.inp  plot_functionals.R  run_simulations.R  step-4.cc
include/: CMakeLists.txt
include/ideal.II/base/: idealii.hh  quadrature_lib.hh  spacetime_quadrature.hh  time_iterator.hh  version.hh.in
include/ideal.II/distributed/: fixed_tria.hh  slab_tria.hh  spacetime_tria.hh
include/ideal.II/dofs/: slab_dof_handler.hh  slab_dof_tools.hh  spacetime_dof_handler.hh
include/ideal.II/fe/: fe_dg.hh  spacetime_fe_values.hh
include/ideal.II/grid/: fixed_tria.hh  slab_tria.hh  spacetime_tria.hh
include/ideal.II/lac/: spacetime_trilinos_vector.hh  spacetime_vector.hh
include/ideal.II/numerics/: vector_tools.hh
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+11 more)
src/: CMakeLists.txt
src/fe/: fe_dg.cc  (+4 more)
(+99 files in other folders)
